Bug 364294 - Regression: Program Guide window
Summary: Regression: Program Guide window
Status: RESOLVED FIXED
Alias: None
Product: kaffeine
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Mauro Carvalho Chehab
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-14 07:00 UTC by lev.cohan
Modified: 2016-06-14 10:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
program-guide-window in kaffeine 1.3.1 (93.91 KB, image/png)
2016-06-14 07:01 UTC, lev.cohan
Details
program-guide-window in kaffeine 2.0.1 (126.45 KB, image/png)
2016-06-14 07:02 UTC, lev.cohan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description lev.cohan 2016-06-14 07:00:34 UTC
The new program-guide-window in 2.0.1 to 2.0.3 wastes a lot of vertical space in comparison to 1.3.1,
see attached screenshots. In times of monitors with widescreen ratios (16:10, 16:9, 21:9, ..) being standard, vertical screen space is precious. 

Please revert to the old design of the program-guide-window from 1.3.1 or make the alignment of the fields in this window configurable (horizontal or vertical alignment).


Reproducible: Always

Steps to Reproduce:
Start kaffeine, at the menu bar go to Television -> Program Guide or press G

Actual Results:  
Vertical alignment of the the fields.

Expected Results:  
Horizontal alignment of the the fields, like in 1.3.1.
Comment 1 lev.cohan 2016-06-14 07:01:50 UTC
Created attachment 99489 [details]
program-guide-window in kaffeine 1.3.1
Comment 2 lev.cohan 2016-06-14 07:02:36 UTC
Created attachment 99490 [details]
program-guide-window in kaffeine 2.0.1
Comment 3 Mauro Carvalho Chehab 2016-06-14 10:13:32 UTC
Git commit c12f141d9f3869dda2039cd3b2d0e301dee3a6bd by Mauro Carvalho Chehab.
Committed on 14/06/2016 at 10:12.
Pushed by mauroc into branch 'master'.

dvbepgdialog: Restore the original layout

The conversion to KF5 change the box layout, making it less
efficient with wide screens. Restore the original layout.

Signed-off-by: Mauro Carvalho Chehab <mchehab@osg.samsung.com>

M  +2    -2    src/dvb/dvbepgdialog.cpp

http://commits.kde.org/kaffeine/c12f141d9f3869dda2039cd3b2d0e301dee3a6bd