dvbepgdialog: Restore the original layout

The conversion to KF5 change the box layout, making it less
efficient with wide screens. Restore the original layout.

BUG: 364294

Signed-off-by: Mauro Carvalho Chehab <mchehab@osg.samsung.com>